lib_LTLIBRARIES = libportals.la
libportals_la_CPPFLAGS = -Wall -ggdb -O0 -I$(top_srcdir)/include -DPTL_LOG_ENABLE=4
libportals_la_LIBADD = -libverbs -lpthread -lrt -lev
libportals_la_SOURCES = \
	ptl.c \
	ptl_atomic.c \
	ptl_buf.c \
	ptl_buf.h \
	ptl_ct.c \
	ptl_ct.h \
	ptl_data.c \
	ptl_data.h \
	ptl_eq.c \
	ptl_eq.h \
	ptl_evloop.c \
	ptl_evloop.h \
	ptl_gbl.c \
	ptl_gbl.h \
	ptl_handle.c \
	ptl_handle.h \
	ptl_hdr.c \
	ptl_hdr.h \
	ptl_id.c \
	ptl_index.c \
	ptl_index.h \
	ptl_init.c \
	ptl_le.c \
	ptl_le.h \
	ptl_loc.h \
	ptl_log.h \
	ptl_maps.c \
	ptl_maps.h \
	ptl_md.c \
	ptl_md.h \
	ptl_me.c \
	ptl_me.h \
	ptl_move.c \
	ptl_mr.c \
	ptl_mr.h \
	ptl_ni.c \
	ptl_ni.h \
	ptl_obj.c \
	ptl_obj.h \
	ptl_pt.c \
	ptl_pt.h \
	ptl_rdma.c \
	ptl_recv.c \
	ptl_ref.c \
	ptl_ref.h \
	ptl_send.c \
	ptl_tgt.c \
	ptl_types.h \
	ptl_xx.c \
	ptl_xx.h \
	ptl_rt.c \
	ptl_rt.h
